{
  "version": 4,
  "terraform_version": "1.0.0",
  "serial": 687,
  "lineage": "c1f6ea38-c7ce-7296-4e70-feda019c999f",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_alb",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-west-2:031173150068:loadbalancer/app/UAT-web-LB/e772138c9d18e853",
            "arn_suffix": "app/UAT-web-LB/e772138c9d18e853",
            "dns_name": "UAT-web-LB-956408651.us-west-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "id": "arn:aws:elasticloadbalancing:us-west-2:031173150068:loadbalancer/app/UAT-web-LB/e772138c9d18e853",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "UAT-web-LB",
            "security_groups": [
              "sg-01bda9b572134115f"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-03127438eb02bb417"
              },
              {
                "subnet_id": "subnet-058b74c9e0a5cfb42"
              }
            ],
            "subnets": [
              "subnet-03127438eb02bb417",
              "subnet-058b74c9e0a5cfb42"
            ],
            "tags": {
              "Name": "UAT-WEB-LB"
            },
            "tags_all": {
              "Name": "UAT-WEB-LB"
            },
            "vpc_id": "vpc-0f8f820f447db8ad9",
            "zone_id": "Z1H1FL5HABSF5"
          },
          "dependencies": [
            "aws_security_group.lb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_listener",
      "name": "front_end",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-west-2:031173150068:listener/app/UAT-web-LB/e772138c9d18e853/8fe7bed7adee4a42",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-west-2:031173150068:targetgroup/UAT-target-group/e81d332d96924947",
                "type": "forward"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:031173150068:listener/app/UAT-web-LB/e772138c9d18e853/8fe7bed7adee4a42",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-west-2:031173150068:loadbalancer/app/UAT-web-LB/e772138c9d18e853",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_alb.main",
            "aws_alb_target_group.app",
            "aws_security_group.lb",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_alb_target_group",
      "name": "app",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-west-2:031173150068:targetgroup/UAT-target-group/e81d332d96924947",
            "arn_suffix": "targetgroup/UAT-target-group/e81d332d96924947",
            "deregistration_delay": 300,
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 3,
                "interval": 30,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-west-2:031173150068:targetgroup/UAT-target-group/e81d332d96924947",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "UAT-target-group",
            "port": 80,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "tags": {
              "Name": "UAT-WEB-TG"
            },
            "tags_all": {
              "Name": "UAT-WEB-TG"
            },
            "target_type": "ip",
            "vpc_id": "vpc-0f8f820f447db8ad9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_eip",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "domain": "vpc",
            "id": "eipalloc-0e0320ee5df8a0c63",
            "network_border_group": "us-west-2",
            "public_dns": "ec2-52-10-204-218.us-west-2.compute.amazonaws.com",
            "public_ip": "52.10.204.218",
            "public_ipv4_pool": "amazon",
            "vpc": true
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "internet-gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:031173150068:internet-gateway/igw-0bb4b09eeacbf320a",
            "id": "igw-0bb4b09eeacbf320a",
            "owner_id": "031173150068",
            "tags": {
              "Name": "uat-internet-gw"
            },
            "tags_all": {
              "Name": "uat-internet-gw"
            },
            "vpc_id": "vpc-0f8f820f447db8ad9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "gw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0e0320ee5df8a0c63",
            "connectivity_type": "public",
            "id": "nat-0652781ae6176a5ac",
            "network_interface_id": "eni-080d1d6d1a0ba9061",
            "private_ip": "10.10.0.122",
            "public_ip": "52.10.204.218",
            "subnet_id": "subnet-03127438eb02bb417",
            "tags": {
              "Name": "Nat-IG"
            },
            "tags_all": {
              "Name": "Nat-IG"
            }
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:031173150068:route-table/rtb-06dc2cef9f9b61258",
            "id": "rtb-06dc2cef9f9b61258",
            "owner_id": "031173150068",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0652781ae6176a5ac",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "uat-private"
            },
            "tags_all": {
              "Name": "uat-private"
            },
            "vpc_id": "vpc-0f8f820f447db8ad9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_eip.gw",
            "aws_nat_gateway.gw",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:031173150068:route-table/rtb-0351713f7b11733b3",
            "id": "rtb-0351713f7b11733b3",
            "owner_id": "031173150068",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0bb4b09eeacbf320a",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "uat-public"
            },
            "tags_all": {
              "Name": "uat-public"
            },
            "vpc_id": "vpc-0f8f820f447db8ad9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.internet-gw",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01760c4b5bfd89e18",
            "route_table_id": "rtb-06dc2cef9f9b61258",
            "subnet_id": "subnet-0924832ce9620d401"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_nat_gateway.gw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01246b98cc7eb7ab7",
            "route_table_id": "rtb-06dc2cef9f9b61258",
            "subnet_id": "subnet-0cae18cccbc1c7064"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_nat_gateway.gw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b7cd0b96823da998",
            "route_table_id": "rtb-06dc2cef9f9b61258",
            "subnet_id": "subnet-0a0a1f107ab4ea0b2"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_nat_gateway.gw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-01e97180dab053522",
            "route_table_id": "rtb-06dc2cef9f9b61258",
            "subnet_id": "subnet-092daa3bb75bb1e89"
          },
          "dependencies": [
            "aws_eip.gw",
            "aws_nat_gateway.gw",
            "aws_route_table.private",
            "aws_subnet.private",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-068d3f1278967f69a",
            "route_table_id": "rtb-0351713f7b11733b3",
            "subnet_id": "subnet-03127438eb02bb417"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08b956eb16f6611c0",
            "route_table_id": "rtb-0351713f7b11733b3",
            "subnet_id": "subnet-058b74c9e0a5cfb42"
          },
          "dependencies": [
            "aws_internet_gateway.internet-gw",
            "aws_route_table.public",
            "aws_subnet.public",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs_tasks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:031173150068:security-group/sg-00ba08546d65b7d51",
            "description": "allow inbound access from the ALB only",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-00ba08546d65b7d51",
            "ingress": [
              {
                "cidr_blocks": [],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-01bda9b572134115f"
                ],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "myapp-ecs-tasks-security-group",
            "name_prefix": "",
            "owner_id": "031173150068",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f8f820f447db8ad9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_security_group.lb",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "lb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:031173150068:security-group/sg-01bda9b572134115f",
            "description": "controls access to the ALB",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-01bda9b572134115f",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "myapp-load-balancer-security-group",
            "name_prefix": "",
            "owner_id": "031173150068",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0f8f820f447db8ad9"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:031173150068:subnet/subnet-0924832ce9620d401",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.10.2.0/25",
            "id": "subnet-0924832ce9620d401",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "031173150068",
            "tags": {
              "Name": "UAT-PRI-SUBNET 1"
            },
            "tags_all": {
              "Name": "UAT-PRI-SUBNET 1"
            },
            "vpc_id": "vpc-0f8f820f447db8ad9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:031173150068:subnet/subnet-0cae18cccbc1c7064",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.10.2.128/25",
            "id": "subnet-0cae18cccbc1c7064",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "031173150068",
            "tags": {
              "Name": "UAT-PRI-SUBNET 2"
            },
            "tags_all": {
              "Name": "UAT-PRI-SUBNET 2"
            },
            "vpc_id": "vpc-0f8f820f447db8ad9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:031173150068:subnet/subnet-0a0a1f107ab4ea0b2",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.10.3.0/25",
            "id": "subnet-0a0a1f107ab4ea0b2",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "031173150068",
            "tags": {
              "Name": "UAT-PRI-SUBNET 3"
            },
            "tags_all": {
              "Name": "UAT-PRI-SUBNET 3"
            },
            "vpc_id": "vpc-0f8f820f447db8ad9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 3,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:031173150068:subnet/subnet-092daa3bb75bb1e89",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.10.3.128/25",
            "id": "subnet-092daa3bb75bb1e89",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "031173150068",
            "tags": {
              "Name": "UAT-PRI-SUBNET 4"
            },
            "tags_all": {
              "Name": "UAT-PRI-SUBNET 4"
            },
            "vpc_id": "vpc-0f8f820f447db8ad9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:031173150068:subnet/subnet-03127438eb02bb417",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2a",
            "availability_zone_id": "usw2-az2",
            "cidr_block": "10.10.0.0/25",
            "id": "subnet-03127438eb02bb417",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "031173150068",
            "tags": {
              "Name": "UAT-PUB-SUBNET 1"
            },
            "tags_all": {
              "Name": "UAT-PUB-SUBNET 1"
            },
            "vpc_id": "vpc-0f8f820f447db8ad9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:031173150068:subnet/subnet-058b74c9e0a5cfb42",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-west-2b",
            "availability_zone_id": "usw2-az1",
            "cidr_block": "10.10.1.0/25",
            "id": "subnet-058b74c9e0a5cfb42",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "031173150068",
            "tags": {
              "Name": "UAT-PUB-SUBNET 2"
            },
            "tags_all": {
              "Name": "UAT-PUB-SUBNET 2"
            },
            "vpc_id": "vpc-0f8f820f447db8ad9"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-west-2:031173150068:vpc/vpc-0f8f820f447db8ad9",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.10.0.0/22",
            "default_network_acl_id": "acl-0738d5d81e5120c0a",
            "default_route_table_id": "rtb-09f8e84c9efae8129",
            "default_security_group_id": "sg-0dd671da3d953c818",
            "dhcp_options_id": "dopt-0ed8ff76",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0f8f820f447db8ad9",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-09f8e84c9efae8129",
            "owner_id": "031173150068",
            "tags": {
              "Name": "UAT-VPC"
            },
            "tags_all": {
              "Name": "UAT-VPC"
            }
          }
        }
      ]
    }
  ]
}